--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,18 +8,21 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+    
 jobs:
 
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go_version: ['1.17', '1.18', '>=1.18']    
     steps:
-    - uses: actions/checkout@v3
-
+    - uses: actions/checkout@v4
+    
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.20'
+        go-version: ${{ matrix.go_version }}
 
     - name: Build-DB
       run: docker-compose build
@@ -29,6 +32,7 @@ jobs:
 
     - name: Test
       run: go test -v main_test.go
+  
   build:
 
     needs: test
