env vars actions go.yml

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,13 @@ on:
 jobs:
 
   test:
+    env:
+      HOST: localhost
+      PORT: 5432
+      USER: root
+      PASSWORD: root
+      DBNAME: root
+      
     strategy:
       matrix:
         go_version: ['1.17', '1.18', '>=1.18']
