--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,7 +21,7 @@ jobs:
     
     env:
       HOST: localhost
-      PORT: "5432"
+      PORT: 5432
       USER: root
       PASSWORD: root
       DBNAME: root
