--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
     
     env:
       HOST: localhost
-      PORT: teste
+      DBPORT: teste
       USER: root
       PASSWORD: root
       DBNAME: root
