acho que agora vai hein
acertei o nome da variavel da porta do banco

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
     
     env:
       HOST: localhost
-      DBPORT: teste
+      DBPORT: 5432
       USER: root
       PASSWORD: root
       DBNAME: root
