--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -1,2 +1,12 @@
-        needs: build
-           uses: ./.github/workflows/Docker.yml
+name: Docker
+
+on:
+ workflow_call:
+
+jobs:
+ docker:
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v3
+    - name: setup Docker Build
+      uses: docker/setup-buildx-action@v2.0.0
