--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,10 +5,6 @@ name: Go
 
 on:
   workflow_dispatch:
-  push:
-    branches: [ "*" ]
-  pull_request:
-    branches: [ "*" ]
   
 jobs:
 
@@ -57,3 +53,8 @@ jobs:
     
     - name: Build
       run: go build -v main.go
+
+  docker:
+
+    needs: build
+    uses: ./.github/workflows/Docker.yml
