--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -20,3 +20,11 @@ jobs:
        username: rflbarcelos
   # Password or personal access token used to log against the Docker registry
        password: ${{ secrets.PASSWORD_DOCKER_HUB }}
+    
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v3.0.0
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: rflbarcelos/testeci
