--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,7 +12,6 @@ jobs:
     strategy:
       matrix:
         go_version: ['1.17', '1.18', '>=1.18']
-        os: [ubuntu-22.04, ubuntu-20.04]
     
     runs-on: ${{ matrix.os }}
     
@@ -43,16 +42,19 @@ jobs:
   build:
 
     needs: test
-    strategy:
-      matrix:
-        os: [ubuntu-22.04, ubuntu-20.04]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v4
     
     - name: Build
       run: go build -v main.go
+
+    - name: Upload main compilado
+      uses: actions/upload-artifact@v3
+      with:
+        name: programa
+        path: main
 
   docker:
 
