--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         go_version: ['1.17', '1.18', '>=1.18']
     
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     
     env:
       HOST: localhost
