--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -20,7 +20,12 @@ jobs:
        username: rflbarcelos
   # Password or personal access token used to log against the Docker registry
        password: ${{ secrets.PASSWORD_DOCKER_HUB }}
-    
+
+    - name: Download main compilado
+      uses: actions/download-artifact@v3
+      with:
+        name: programa
+        
     - name: Build and push Docker images
       uses: docker/build-push-action@v3.0.0
       with:
